# NLWebAgent

./: .env.example  .gitignore  LICENSE  README.md  config.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
agent/: __init__.py  actions.py  orchestrator.py
assets/: generate_screenshots.py
auth/: __init__.py  manager.py  policies.py
browser/: __init__.py  playwright_agent.py
cli/: __init__.py  main.py
cli/assertions/: __init__.py  evaluator.py  parser.py
cli/codegen/: __init__.py  generator.py
cli/commands/: __init__.py  assert_cmd.py  record.py  run.py  test.py
examples/: login-test.spec.ts
models/: __init__.py  base_model.py  claude_model.py  glm_model.py  model_selector.py  ollama_model.py  openai_model.py
tasks/: __init__.py  example_workflows.py
tests/: test_action_parsing.py  test_fixture_workflows.py  test_recording_artifacts.py  test_retry_behavior.py
tests/fixtures/: data_table.html  login_form.html  retry.html  search.html
